--- a/_config.yml
+++ b/_config.yml
@@ -129,7 +129,16 @@ content:
         sub_title: Computer Vision Research Engineer
         caption: June 2023 - Present
         description: |
-          - Multi-camera calibration
+          Multi-camera calibration
+          - I calibrated several dozen cameras installed in a retail space.
+          - Achieved a triangulation accuracy of less than 3 cm.
+          - Identified and reported several errors in the OpenCV library related to pattern detection functions.
+          - Developed a custom solution for calibrating the intrinsics and extrinsics parameters of cameras.
+
+          Hand Positioning Accuracy Enhancement
+          - Developed an algorithm for refining hand positioning using triangulation data, which significantly reduced the impact of even substantial noise, ensuring high accuracy in position determination.
+          - Resilient to outliers
+          - Operates in real-time
 
       - layout: left
         title: Artial
