--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ about_content: |
   I pay a lot of attention to clear solution design, unit tests, documentation, code readability, CI, CB.\
   The goal of my work is to create an effective solution, user-friendly and maintainable.\
   \
-  Location: Batumi, Georgia
+  Location: Barcelona, Spain
 
 content:
   - title: Skills
