Fix non-latin character

--- a/_config.yml
+++ b/_config.yml
@@ -142,7 +142,7 @@ content:
 
       - layout: left
         title: Artial
-        sub_title: Autonomy Lead/Startup Сonsultant
+        sub_title: Autonomy Lead/Startup Consultant
         caption: April 2023 - May 2023
         description: |
           As an experienced engineer, I have laid a solid foundation for the successful development of software for optical navigation of UAVs.\
