--- a/_config.yml
+++ b/_config.yml
@@ -45,9 +45,9 @@ additional_links:
 about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: |
-  Senior R&D Computer Vision Engineer (10 years+), with a wide range of completed projects in various fields. I have a good understanding of how to organize work in an unknown field, which development and research directions to choose, how to analyze results and make decisions.\
-  I pay a lot of attention to clear solution design, unit tests, documentation, code readability, CI, CB.\
-  The goal of my work is to create an effective solution, user-friendly and maintainable.\
+  Senior R&D Computer Vision Engineer with over 10 years of experience and a wide range of completed projects in various fields. I have a strong understanding of how to organize work in new areas, select development and research directions, analyze results, and make informed decisions.
+  I place a high emphasis on clear solution design, unit tests, documentation, code readability, continuous integration (CI), and continuous benchmarks (CB).\
+  My goal is to create effective, user-friendly, and maintainable solutions.\
   \
   Location: Barcelona, Spain
 
