--- a/_config.yml
+++ b/_config.yml
@@ -211,7 +211,7 @@ content:
         sub_title: C++ Software Engineer
         caption: March 2012 — May 2012
         description: |
-          - Ported mobile applications from Android to Samsung Bada OS
+          - Ported mobile application from Android to Samsung Bada OS
 
       - layout: left
         title: Hotspot
