--- a/_config.yml
+++ b/_config.yml
@@ -183,26 +183,20 @@ content:
           - Research of the efficiency of 3D map representation as a set of geometric primitives in a SLAM problem
 
       - layout: left
-        title: Freelancer (upwork.com, freelansim.ru, etc)
+        title: Contractor (upwork.com, freelansim.ru, etc)
         link: upwork.com
         sub_title: C++ Computer Vision Engineer
         caption: May 2012 — December 2021
         description: |
-          I have completed many different projects, which has given me a broad view of the industry. I handled all stages independently, from creating terms of reference to development, communication, and project deployment. This experience has provided me with a comprehensive understanding of the entire development cycle and related areas, beyond just programming.
+          I have completed many different projects, which has given me a broad view of the industry. I have handled all stages independently, from the creation of the terms of reference to development, communication and project delivery. This experience has given me a comprehensive understanding of the entire development cycle and related areas, beyond just programming
 
-          Work result on Upwork:
-          - 100% Job success
-          - **Top Rated** status
-          - Clients who would recommend you: 85%
-
-          Some job topics:
-          - Stereocamera system with two single cameras (calibration, synchronization)
-          - Application for one-hand large gesture recognition using a single-lens camera
-          - Sportsmen's id identification by self-developed 2D-barcode (with checksum)
-          - Hockey trainer device (two high-speed cameras detected trajectory, velocity and
-          hit point of the puck)
-          - UAV landing system that tracks a QR code with a single camera to obtain relative position with high accuracy, even in poor light and weather conditions
-          - Video search engine (search modified (color, crop, reflection) clip in video database)
+          - Achieved 100% Job Success Rate, earned Top Rated Status, and received an 85% Client Recommendation Rate on Upwork
+          - Designed and implemented a stereocamera system with two single cameras, including calibration and synchronization
+          - Developed an application for one-hand large gesture recognition using a single-lens camera
+          - Created a sportsmen ID identification system using a self-developed 2D-barcode with checksum
+          - Engineered a hockey training device with two high-speed cameras to detect puck trajectory, velocity, and hit points
+          - Developed a UAV landing system tracking a QR code with a single camera, achieving high accuracy in poor light and weather conditions
+          - Built a video search engine to find modified clips (color, crop, reflection) within a video database
           - Worked on drone orthophoto map creation and structures from motion
 
       - layout: left
