--- a/_config.yml
+++ b/_config.yml
@@ -174,13 +174,11 @@ content:
         sub_title: Senior C++ Computer Vision Engineer
         caption: December 2019 — September 2021
         description: |
-          We mostly dealt with SLAM problems.\
-          I did projects as a team member, personally, and as a project manager:
-          - Precise camera localization by 2D code
-          - Fast pose recognition a 3D dot pattern
-          - Research modern nonlinear solver (GTSAM) (I found [this issue](https://github.com/borglab/gtsam/issues/248#issuecomment-613988881))
-          - Creation of the SLAM backend engine from scratch (as project lead)
-          - Research of the efficiency of 3D map representation as a set of geometric primitives in a SLAM problem
+          - Led the development of a SLAM backend engine from scratch, successfully completing the project within three months. Efficiently organized team workflow, achieving 20% higher accuracy compared to a solution developed by another department over the course of a year.
+          - Developed and implemented a real-time algorithm for precise camera localization using 2D barcodes, achieving 10 times the accuracy of standard methods
+          - Developed an original Python algorithm for determining the spatial position of a VR controller with a dot pattern, achieving performance several times faster than other teams' solutions
+          - Conducted research and testing of GTSAM as part of a review of modern SLAM solutions, identified a critical issue that made it less effective than Ceres Solver for SLAM applications, and successfully communicated the problem to the author on GitHub, resulting in its resolution [issue](https://github.com/borglab/gtsam/issues/248#issuecomment-613988881))
+          - Researched methods for representing urban landscapes in SLAM as planes and geometric primitives, aiming to reduce memory usage and improve landscape part matching
 
       - layout: left
         title: Contractor (upwork.com, freelansim.ru, etc)
