--- a/_config.yml
+++ b/_config.yml
@@ -220,7 +220,7 @@ content:
     content:
       - layout: left
         title: National Research Nuclear University MEPhI (Moscow Engineering Physics Institute)
-        caption: 2003 - 2009
+        caption: September 2003 - August 2009
         sub_title: Master's degree in Experimental and Theoretical Physics, specializing in Radiation Protection and Dosimetry
         quote: >
            Founded in 1942, MEPhI is the world's leading university in the field of theoretical and experimental nuclear physics
