Remove personal pronouns

--- a/_config.yml
+++ b/_config.yml
@@ -163,7 +163,7 @@ content:
         sub_title: C++ Computer Vision Engineer
         caption: May 2012 — December 2021
         description: |
-          I have completed many different projects, which has given me a broad view of the industry. I have handled all stages independently, from the creation of the terms of reference to development, communication and project delivery. This experience has given me a comprehensive understanding of the entire development cycle and related areas, beyond just programming
+         Completed many different projects, providing a broad view of the industry. Handled all stages independently, from the creation of the terms of reference to development, communication, and project delivery. This experience provided a comprehensive understanding of the entire development cycle and related areas, beyond just programming
 
           - Achieved 100% Job Success Rate, earned Top Rated Status, and received an 85% Client Recommendation Rate on Upwork
           - Designed and implemented a stereocamera system with two single cameras, including calibration and synchronization
@@ -203,7 +203,7 @@ content:
         quote: >
            Founded in 1942, MEPhI is the world's leading university in the field of theoretical and experimental nuclear physics
         description: | # this will include new lines to allow paragraphs
-           I received a strong education in physics and mathematics and research experience.
+           Received a strong education in physics and mathematics, along with extensive research experience
         #
         #   I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
 
